import org.gradle.internal.os.OperatingSystem
import java.text.SimpleDateFormat

plugins {
    id 'application'
    id 'com.gradleup.shadow' version '9.6.0'
}

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

compileJava() {
    options.compilerArgs << "-Amapstruct.defaultComponentModel=jsr330"
    options.compilerArgs << "-Amapstruct.unmappedTargetPolicy=IGNORE"
    options.compilerArgs << "-Xlint:deprecation"
}

project.ext.javafxPlatform = "${javafxPlatform}"

if (javafxPlatform == "unspecified") {
    switch (OperatingSystem.current()) {
        case OperatingSystem.LINUX:
            project.ext.javafxPlatform = "linux"
            break
        case OperatingSystem.MAC_OS:
            String arch = System.getProperty("os.arch")
            if (arch == "aarch64") {
                project.ext.javafxPlatform = "mac-aarch64"
            } else {
                project.ext.javafxPlatform = "mac"
            }
            break
        case OperatingSystem.WINDOWS:
            project.ext.javafxPlatform = "win"
            break
    }
}

println "Platform is: ${javafxPlatform}"

dependencies {
    def springBootVersion = "4.0.6"
    def mapStructVersion = "1.6.3"
    def commonsVersion = "20260628-7c450f0"

    annotationProcessor(platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}"))
    implementation(platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}"))

    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
    annotationProcessor("org.projectlombok:lombok")
    annotationProcessor("org.mapstruct:mapstruct-processor:${mapStructVersion}")
    implementation("org.projectlombok:lombok")
    implementation("org.jetbrains:annotations:26.1.0")
    implementation("org.springframework.boot:spring-boot-starter")
    implementation("org.springframework.boot:spring-boot-starter-validation")
    implementation("org.springframework.boot:spring-boot-starter-oauth2-client:4.0.6")
    implementation("io.projectreactor.netty:reactor-netty-http")
    implementation("javax.inject:javax.inject:1")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jdk8")
    implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
    implementation("com.github.jasminb:jsonapi-converter:0.15")
    implementation 'org.java-websocket:Java-WebSocket:1.6.0' // Required for LobbyWebSocketClient
    implementation("com.faforever.commons:data:${commonsVersion}")
    implementation("com.faforever.commons:api:${commonsVersion}")
    implementation("com.faforever.commons:lobby:${commonsVersion}")
    implementation("org.apache.httpcomponents:httpclient:4.5.14")
    implementation("com.github.rutledgepaulv:q-builders:1.6")
    implementation("com.google.guava:guava:33.6.0-jre")
    implementation("org.kitteh.irc:client-lib:9.0.0")
    implementation("org.mapstruct:mapstruct:${mapStructVersion}")
    implementation("org.openjfx:javafx-base:${javafxVersion}:${javafxPlatform}")
    implementation("org.openjfx:javafx-controls:${javafxVersion}:${javafxPlatform}")
    implementation("org.openjfx:javafx-graphics:${javafxVersion}:${javafxPlatform}")
    implementation("org.openjfx:javafx-fxml:${javafxVersion}:${javafxPlatform}")
    implementation("org.openjfx:javafx-web:${javafxVersion}:${javafxPlatform}")
    implementation("org.openjfx:javafx-media:${javafxVersion}:${javafxPlatform}")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.22.1")
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
    implementation 'org.json:json:20260522'
    implementation 'org.apache.httpcomponents.core5:httpcore5:5.4.2'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.6.1'
}

application {
    mainClass.set('com.faforever.moderatorclient.Launcher')
}

group = 'com.faforever'
description = 'faf-moderator-client'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    sourceCompatibility = '21'
}

// This fixes the "line too long" error when running the .bat with windows CLI
tasks.withType(CreateStartScripts).each { task ->
    task.doLast {
        String text = task.windowsScript.text
        // Replaces the per file classpath (which are all jars in "lib") with a wildcard on lib
        text = text.replaceFirst(/(set CLASSPATH=%APP_HOME%\\lib\\).*/, { "${it[1]}*" })
        text = text.replace("set DEFAULT_JVM_OPTS=", "set DEFAULT_JVM_OPTS=\"-Dfaf.app.home=%APP_HOME%\"")
        task.windowsScript.write text

        text = task.unixScript.text
        // Inner \" quoting keeps "-Dfaf.app.home=$APP_HOME" a single xargs token even if APP_HOME has spaces
        text = text.replace('DEFAULT_JVM_OPTS=""', 'DEFAULT_JVM_OPTS="\\"-Dfaf.app.home=$APP_HOME\\""')
        task.unixScript.write text
    }
}

distZip {
    archiveClassifier.set(javafxPlatform)
}

def buildDistributionsDir = layout.buildDirectory.dir("distributions")
def buildInstallDir = layout.buildDirectory.dir("install/${project.name}")

tasks.register("printBuildOutputPaths") {
    doLast {
        println ""
        println "Build outputs:"

        def distributionDir = buildDistributionsDir.get().asFile
        def distributionFiles = distributionDir.exists()
                ? distributionDir.listFiles().findAll { it.isFile() && (it.name.endsWith(".zip") || it.name.endsWith(".tar")) }.sort { it.name }
                : []
        if (distributionFiles) {
            distributionFiles.each { println "  Distribution archive: ${it.absolutePath}" }
        } else {
            println "  Distribution archive: not found in ${distributionDir.absolutePath}"
        }

        def installDir = buildInstallDir.get().asFile
        if (installDir.exists()) {
            println "  Runnable install folder: ${installDir.absolutePath}"
            println "  Start scripts: ${new File(installDir, 'bin').absolutePath}"
        } else {
            println "  Runnable install folder: not built by this task"
        }
    }
}

build.finalizedBy(tasks.named("printBuildOutputPaths"))

static def dateVersion() {
    def now = new Date()
    return now.format('yyyy-MM-dd')
}

version = providers.gradleProperty('version').orElse(dateVersion()).get()

processResources {
    def resolvedVersion = version
    filesMatching("**/application.properties") {
        expand(version: resolvedVersion)
    }
}

tasks.register("generateVersionClass") {
    def outputDir = layout.buildDirectory.dir("generated/sources/version")
    def resolvedVersion = version
    inputs.property("version", resolvedVersion)
    outputs.dir(outputDir)

    doLast {
        def pkg = "com.faforever.moderatorclient.config"
        def dir = outputDir.get().asFile
        def file = new File(dir, "${pkg.replace('.', '/')}/ApplicationVersion.java")

        def date = new SimpleDateFormat("yyyy-MM-dd").format(new Date())
        def version = resolvedVersion == "snapshot" ? date : resolvedVersion.replaceFirst(/^v/, '')

        file.parentFile.mkdirs()
        file.text = """package ${pkg};

import org.springframework.stereotype.Component;

@Component
public class ApplicationVersion {
    public static final String CURRENT_VERSION = "v${version}";
}
"""
    }
}

sourceSets.main.java.srcDir(layout.buildDirectory.dir("generated/sources/version"))
compileJava.dependsOn(tasks.named("generateVersionClass"))

test {
    useJUnitPlatform()
    // Isolates java.util.prefs.Preferences from the real OS-backed store (Windows registry / ~/.java) so
    // credential tests never read or clear the packaged app's saved login token.
    systemProperty 'java.util.prefs.PreferencesFactory', 'com.faforever.moderatorclient.config.local.InMemoryPreferencesFactory'
}
